[package]
name = "ebay-scraper"
version = "0.1.0"
authors = ["Glaeser, Ben William <ben.glaeser@aperto.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.18"
select = "0.4.2"
regex = "1"
lazy_static = "1.3.0"
serde_json = "1.0.39"